fixed overlapping sections

--- a/src/App.scss
+++ b/src/App.scss
@@ -33,14 +33,15 @@ body {
   color: $dark-brown;
   background: $primary-brown;
   line-height: 1.6;
-  height: 100vh;
+  min-height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 .App {
-  width: 100%;
-  height: 100%;
+  width:100%;
+  display: block;
+  overflow: auto;
 }
 
 
