--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -48,3 +48,12 @@
 .navCenter {
     flex: 6;
 }
+
+@media screen and (max-width: 1200px) {
+    .navbar {
+        background: transparent;
+        position: initial;
+        height: auto;
+        min-height: auto;
+    }
+}
