--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+@media screen and (max-width: 768px) {
+  
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
