--- a/src/pages/About.scss
+++ b/src/pages/About.scss
@@ -1,5 +1,5 @@
 .about-page {
-    height: 100vh;
+    min-height: 100vh;
     display: block;
     text-align: center;
 
